--- a/estilos.css
+++ b/estilos.css
@@ -2,6 +2,7 @@ html{
     background-color: darkkhaki;
     font-family: "Century Gothic";
 
+
 }
 head{
     text-align: justify;
@@ -12,21 +13,48 @@ h1{
 
     text-align: center;
     background-color: darkkhaki;
-
+    font-size:50px
 }
 .wrap {
     margin: 20px;
     padding: 20px;
     padding-right: 240px;
 
+
 }
 .main{
     margin: 0 -220px 0 auto;
     width: 100%;
-    float: right;
+    /*float: right;*/
+    font-size:20px
 }
 .izquierda {
     width: 200px;
     float: left;
-    height: 200px
+    height: 200px;
+    padding-left: 5px;
+    border: groove darkolivegreen;
+    border-radius: 20px;
 }
+.resultado{
+    margin: 20px;
+    padding: 20px;
+    padding-right: 240px;
+    padding-left: 5px;
+
+}
+.solucion{
+    margin: 0 40% 0 auto;
+    padding: 20px;
+    width: 100%;
+    font-size:20px;
+    padding-left: 50px;
+}
+.datos{
+    width: 35%;
+    float: left;
+    padding-left: 5px;
+    font-size:20px;
+
+}
+.button{align-content: space-around;}
